2010-05-31  Philippe Villiers <kissifrot@gmail.com>
	* FIX bug #240 :  Be sure to not treat BM_ARCHIVE_PREFIX as a deprecated
	  boolean.
	  
+2010-04-17  Philippe Villiers <kissifrot@gmail.com>
	* FIX bug #246 : Archives created in "/" never obsoloted.
	(Thanks to Nicolas Baradakis for the patch)
	  
2010-01-20  Philippe Villiers <kissifrot@gmail.com>
	* FIX bug #240 : will now create all needed dirs if $BM_REPOSITORY_ROOT
	  or its parents do not exist
	
2010-01-20  Sven Joachim
	* Search for genisoimage and wodim in addition to mkisofs and cdrecord
	* Change mode of $mysql_conffile to 600 before writing password to it
	* Fix long version of -c option in backup-manager.8 (closes Debian #225)

2009-09-26  Rached Ben Mustapha <rached@benmur.net>
	* Fix uploading very big archive files which don't fit in memory
	  to Amazon S3.

2009-07-29  Alexis Sukrieh <sukria@backup-manager.org>
	* FIX bug #223 
	  - New configuration variable `BM_LOGGER_LEVEL' to know which messages
		should be sent to syslog and which should not.
	  - BackupManager::Dialog now reads `BM_LOGGER_LEVEL' and behaves
	    accordingly.
	  - backup-manager-purge users BackupManager::Dialog instead of the
	    internal logger by hand.

2009-02-01  Alexis Sukrieh  <sukria@backup-manager.org>
	* Release 0.7.8
	* Tempfiles are correctly created/purged in backup-manager-upload
	  (thanks to Josh Triplett and Thomas Parmelan; closes Debian #461512).
	* Added a --homedir flag to gnupg commands
	  (thanks to Jochen Zimmermann; closes Debian #494833).
	* Removes MySQL configuration file when automatically created.
	  (Thanks to Mihnea-Costin Grigore; closes Debian #496051) 
	* Resets the error_code so a failure doesn't propagate.
	  (Thanks to Filippo Giunchedi, closes Debian #482087)
	* Rewrite of check_error_code() so we can ignore some error codes
	  depending on the program used.
	  (Closes Debian #482089).


2008-10-24	Alexis Sukrieh  <sukria@backup-manager.org>
